Added error messages to login and users

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angular-notifier": "^3.0.0",
     "bootstrap": "^4.0.0",
     "class-transformer": "^0.1.9",
     "core-js": "^2.4.1",
