--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0",
     "class-transformer": "^0.1.9",
     "core-js": "^2.4.1",
+    "jwt-decode": "^2.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
