--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "build-dev": "ng build --env=dev --prod ",
+    "build-dev": "ng build --env=dev --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0",
     "class-transformer": "^0.1.9",
     "core-js": "^2.4.1",
+    "hopscotch": "^0.3.1",
     "jwt-decode": "^2.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
