--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angular-font-awesome": "^3.1.2",
     "angular-notifier": "^3.0.0",
     "bootstrap": "^4.0.0",
     "class-transformer": "^0.1.9",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "hopscotch": "^0.3.1",
     "jwt-decode": "^2.2.0",
     "rxjs": "^5.5.6",
