--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.0.0",
     "class-transformer": "^0.1.9",
     "core-js": "^2.4.1",
+    "devicehive": "^2.0.2",
     "font-awesome": "^4.7.0",
     "hopscotch": "^0.3.1",
     "jwt-decode": "^2.2.0",
