--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devicehive-admin-panel",
-  "version": "0.0.0",
+  "version": "1.0.0-rc1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
