--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^2.2.0",
     "ngx-clipboard": "^10.0.0",
     "rxjs": "^5.5.6",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
