--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devicehive-admin-panel",
-  "version": "1.0.0-rc1",
-  "license": "MIT",
+  "version": "1.0.0",
+  "license": "Apache 2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
