--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "Apache 2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --env=local",
     "build": "ng build --prod",
     "build-dev": "ng build --env=dev --prod",
     "test": "ng test",
