--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "bootstrap": "^4.0.0",
     "class-transformer": "^0.1.9",
     "core-js": "^2.4.1",
-    "devicehive": "^2.0.3",
+    "devicehive": "^2.1.0",
     "font-awesome": "^4.7.0",
     "hopscotch": "^0.3.1",
     "jwt-decode": "^2.2.0",
     "ngx-clipboard": "^10.0.0",
+    "node-sass": "^4.9.2",
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
